--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,8 @@ environment:
 dependencies:
   flutter:
     sdk: flutter
+  onboarding: ^4.0.2
+  intro_slider: ^4.2.1
 
 
   # The following adds the Cupertino Icons font to your application.
@@ -63,6 +65,10 @@ flutter:
     - assets/images/ReservaYa.png
     - assets/images/ReservaYaHorizontal.png
     - assets/images/volleyball.jpg
+    - assets/carrusel_onboarding/1.png
+    - assets/carrusel_onboarding/2.png
+    - assets/carrusel_onboarding/3.png
+    - assets/carrusel_onboarding/4.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
 
