--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.6
+  flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
   flutter_test:
@@ -71,7 +72,10 @@ flutter:
     - assets/carrusel_onboarding/4.png
   #   - images/a_dot_burr.jpeg
   #   - images/a_dot_ham.jpeg
-
+flutter_launcher_icons:
+  android: true
+  ios: true
+  image_path: assets/images/logo_app.png
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware
 
