--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,8 @@ dependencies:
   flutter_launcher_icons: ^0.13.1
   go_router: ^13.2.4
   intro_slider: ^4.2.1
+  sentry: ^8.0.0
+  sentry_flutter: ^8.0.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
