--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,11 +30,14 @@ environment:
 dependencies:
   bloc: ^8.1.4
   cupertino_icons: ^1.0.6
+  firebase_auth: ^4.19.4
+  firebase_core: ^2.30.1
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
   flutter_launcher_icons: ^0.13.1
   go_router: ^13.2.4
+  google_sign_in: ^6.2.1
   intro_slider: ^4.2.1
   sentry: ^8.0.0
   sentry_flutter: ^8.0.0
