--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.4
+  change_app_package_name: ^1.1.0
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
