--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   intro_slider: ^4.2.1
   sentry: ^8.0.0
   sentry_flutter: ^8.0.0
+  url_launcher: ^6.2.6
 
 dev_dependencies:
   flutter_lints: ^3.0.0
