--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,14 +29,17 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.4
+  carousel_slider: ^4.2.1
   cupertino_icons: ^1.0.6
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
+  flutter_calendar_carousel: ^2.4.2
   flutter_launcher_icons: ^0.13.1
   go_router: ^13.2.4
   intro_slider: ^4.2.1
   sentry_flutter: ^8.0.0
+  table_calendar: 3.0.9
 
 dev_dependencies:
   flutter_lints: ^3.0.0
