--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,14 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
+  flutter_calendar_carousel: ^2.4.2
   flutter_launcher_icons: ^0.13.1
   go_router: ^13.2.4
   intro_slider: ^4.2.1
   sentry: ^8.0.0
   sentry_flutter: ^8.0.0
   url_launcher: ^6.2.6
+  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
