--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,9 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
+  firebase_auth: ^4.19.4
+  firebase_core: ^2.30.1
+  google_sign_in: ^6.2.1
   flutter_calendar_carousel: ^2.4.2
   flutter_launcher_icons: ^0.13.1
   go_router: ^13.2.4
