--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,8 +29,11 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.4
+  carousel_slider: ^4.0.0
   change_app_package_name: ^1.1.0
   cupertino_icons: ^1.0.6
+  firebase_core: ^2.31.0
+  firebase_messaging: ^14.9.2
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.5
@@ -41,7 +44,6 @@ dependencies:
   sentry: ^8.0.0
   sentry_flutter: ^8.0.0
   url_launcher: ^6.2.6
-  carousel_slider: ^4.0.0
 
 dev_dependencies:
   flutter_lints: ^3.0.0
