--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -2,7 +2,7 @@ name: proyect
 description: "A new Flutter project."
 # The following line prevents the package from being accidentally published to
 # pub.dev using `flutter pub publish`. This is preferred for private packages.
-publish_to: 'none' # Remove this line if you wish to publish to pub.dev
+publish_to: "none" # Remove this line if you wish to publish to pub.dev
 
 # The following defines the version and build number for your application.
 # A version number is three numbers separated by dots, like 1.2.43
@@ -19,7 +19,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.1+2
 
 environment:
-  sdk: '>=3.3.1 <4.0.0'
+  sdk: ">=3.3.1 <4.0.0"
 
 # Dependencies specify other packages that your package needs in order to work.
 # To automatically upgrade your package dependencies to the latest versions
@@ -32,6 +32,7 @@ dependencies:
   carousel_slider: ^4.0.0
   change_app_package_name: ^1.1.0
   cupertino_icons: ^1.0.6
+  firebase_auth: ^4.19.5
   firebase_core: ^2.31.0
   firebase_messaging: ^14.9.2
   flutter:
@@ -40,6 +41,7 @@ dependencies:
   flutter_calendar_carousel: ^2.4.2
   flutter_launcher_icons: ^0.13.1
   go_router: ^13.2.4
+  google_sign_in: ^6.2.1
   intro_slider: ^4.2.1
   sentry: ^8.0.0
   sentry_flutter: ^8.0.0
@@ -54,7 +56,6 @@ dev_dependencies:
 # following page: https://dart.dev/tools/pub/pubspec
 # The following section is specific to Flutter packages.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
