--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -77,7 +77,10 @@ android {
            // Signing with the debug keys for now,
            // so `flutter run --release` works.
            signingConfig signingConfigs.debug
-           signingConfig signingConfigs.release
+        //    signingConfig signingConfigs.release
+        }
+        debug {
+            signingConfig signingConfigs.debug
         }
     }
 }
