--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -76,8 +76,9 @@ android {
            // TODO: Add your own signing config for the release build.
            // Signing with the debug keys for now,
            // so `flutter run --release` works.
-           signingConfig signingConfigs.debug
-        //    signingConfig signingConfigs.release
+            signingConfig signingConfigs.release
+            minifyEnabled true
+            shrinkResources true
         }
         debug {
             signingConfig signingConfigs.debug
