--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,6 @@ publish_to: "none" # Remove this line if you wish to publish to pub.dev
 # of the product and file versions while build-number is used as the build suffix.
 version: 1.0.2+3
 
-
 environment:
   sdk: ">=3.3.1 <4.0.0"
 
@@ -49,6 +48,7 @@ dependencies:
   intro_slider: ^4.2.1
   sentry: ^8.0.0
   sentry_flutter: ^8.0.0
+  shared_preferences: ^2.2.3
   url_launcher: ^6.2.6
 
 dev_dependencies:
